Added all but controller stuff gui

--- a/Code/index.html
+++ b/Code/index.html
@@ -5,8 +5,21 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
         <link rel="shortcut icon" href="images/logoThumbnail.png">
+        <link rel="stylesheet" type="text/css" href="css/style.css"/>
     </head>
     <body>
-        <div>Gamepad: The Mapper</div>
+        <div id="content">
+            <div id="titleBox" class="backgroundGray curvedBorder">GAMEPAD: THE MAPPER</div>
+            <div id="saveSettings" class="borderGray buttonBlue curvedBorder">Save</div>
+            <div id="openSave" class="borderGray buttonBlue curvedBorder">Open Save Location</div>
+            <div id="gamepadButtons">
+                <div id="gamepadButton1" class="gamepadButton borderGray buttonBlue curvedBorder">Gamepad 1</div>
+                <div id="gamepadButton2" class="gamepadButton borderGray buttonBlue curvedBorder">Gamepad 2</div>
+                <div id="gamepadButton3" class="gamepadButton borderGray buttonBlue curvedBorder">Gamepad 3</div>
+                <div id="gamepadButton4" class="gamepadButton borderGray buttonBlue curvedBorder">Gamepad 4</div>
+                <div id="gamepadButton5" class="gamepadButton borderGray buttonBlue curvedBorder">Gamepad 5</div>
+                <div id="gamepadButton6" class="gamepadButton borderGray buttonBlue curvedBorder">Gamepad 6</div>
+            </div>
+        </div>
     </body>
 </html>
