gui almost/probably complete

--- a/Code/index.html
+++ b/Code/index.html
@@ -30,10 +30,10 @@
             <div id="controllerBox" class="backgroundGray curvedBorder">
                 <div id="assign" class="curvedBorder">Assign</div>
                 <div id="dpad" class="buttonGroup">
-                    <div id="button13" class="buttonTop buttonRed squareButton"></div>
-                    <div id="button14" class="buttonRight buttonRed squareButton"></div>
-                    <div id="button15" class="buttonBottom buttonRed squareButton"></div>
-                    <div id="button16" class="buttonLeft buttonRed squareButton"></div>
+                    <div id="button17" class="buttonTop buttonRed squareButton"></div>
+                    <div id="button18" class="buttonRight buttonRed squareButton"></div>
+                    <div id="button19" class="buttonBottom buttonRed squareButton"></div>
+                    <div id="button20" class="buttonLeft buttonRed squareButton"></div>
                 </div>
                 <div id="circleButtons" class="buttonGroup">
                     <div id="button1" class="buttonBottom buttonBlue circleButton"></div>
@@ -48,6 +48,24 @@
                 <div id="triggerButtonsLeft" class="buttonGroup">
                     <div id="button5" class="triggerButton buttonRed"></div>
                     <div id="button7" class="bumperButton buttonRed"></div>
+                </div>
+                <div id="rectangleButtons">
+                    <div id="button10" class="rectangleLeft rectangleButton buttonRed"></div>
+                    <div id="button11" class="rectangleRight rectangleButton buttonRed"></div>
+                </div>
+                <div id="stickGroupLeft" class="buttonGroup">
+                    <div id="button9" class="stick buttonBlue"></div>
+                    <div id="button13" class="buttonTop buttonRed squareButton"></div>
+                    <div id="button14" class="buttonRight buttonRed squareButton"></div>
+                    <div id="button15" class="buttonBottom buttonRed squareButton"></div>
+                    <div id="button16" class="buttonLeft buttonRed squareButton"></div>
+                </div>
+                <div id="stickGroupRight" class="buttonGroup">
+                    <div id="button12" class="stick buttonBlue"></div>
+                    <div id="button21" class="buttonTop buttonRed squareButton"></div>
+                    <div id="button22" class="buttonRight buttonRed squareButton"></div>
+                    <div id="button23" class="buttonBottom buttonRed squareButton"></div>
+                    <div id="button24" class="buttonLeft buttonRed squareButton"></div>
                 </div>
             </div>
         </div>
