Added little stick in stick button, gui complete.

--- a/Code/index.html
+++ b/Code/index.html
@@ -54,18 +54,20 @@
                     <div id="button11" class="rectangleRight rectangleButton buttonRed"></div>
                 </div>
                 <div id="stickGroupLeft" class="buttonGroup">
-                    <div id="button9" class="stick buttonBlue"></div>
+                    <div id="button9" class="stickButton buttonBlue"></div>
                     <div id="button13" class="buttonTop buttonRed squareButton"></div>
                     <div id="button14" class="buttonRight buttonRed squareButton"></div>
                     <div id="button15" class="buttonBottom buttonRed squareButton"></div>
                     <div id="button16" class="buttonLeft buttonRed squareButton"></div>
+                    <div id="stickLeft" class="stick"></div>
                 </div>
                 <div id="stickGroupRight" class="buttonGroup">
-                    <div id="button12" class="stick buttonBlue"></div>
+                    <div id="button12" class="stickButton buttonBlue"></div>
                     <div id="button21" class="buttonTop buttonRed squareButton"></div>
                     <div id="button22" class="buttonRight buttonRed squareButton"></div>
                     <div id="button23" class="buttonBottom buttonRed squareButton"></div>
                     <div id="button24" class="buttonLeft buttonRed squareButton"></div>
+                    <div id="stickRight" class="stick"></div>
                 </div>
             </div>
         </div>
