Made all button divs into text input, removed little joystick in middle.

--- a/Code/index.html
+++ b/Code/index.html
@@ -30,44 +30,42 @@
             <div id="controllerBox" class="backgroundGray curvedBorder">
                 <div id="assign" class="curvedBorder">Assign</div>
                 <div id="dpad" class="buttonGroup">
-                    <div id="button17" class="buttonTop buttonRed squareButton"></div>
-                    <div id="button18" class="buttonRight buttonRed squareButton"></div>
-                    <div id="button19" class="buttonBottom buttonRed squareButton"></div>
-                    <div id="button20" class="buttonLeft buttonRed squareButton"></div>
+                    <input type="text" readonly id="button17" class="buttonTop buttonRed squareButton">
+                    <input type="text" readonly id="button18" class="buttonRight buttonRed squareButton">
+                    <input type="text" readonly id="button19" class="buttonBottom buttonRed squareButton">
+                    <input type="text" readonly id="button20" class="buttonLeft buttonRed squareButton">
                 </div>
                 <div id="circleButtons" class="buttonGroup">
-                    <div id="button1" class="buttonBottom buttonBlue circleButton"></div>
-                    <div id="button2" class="buttonRight buttonBlue circleButton"></div>
-                    <div id="button3" class="buttonLeft buttonBlue circleButton"></div>
-                    <div id="button4" class="buttonTop buttonBlue circleButton"></div>
+                    <input type="text" readonly id="button1" class="buttonBottom buttonBlue circleButton">
+                    <input type="text" readonly id="button2" class="buttonRight buttonBlue circleButton">
+                    <input type="text" readonly id="button3" class="buttonLeft buttonBlue circleButton">
+                    <input type="text" readonly id="button4" class="buttonTop buttonBlue circleButton">
                 </div>
                 <div id="triggerButtonsRight" class="buttonGroup">
-                    <div id="button8" class="triggerButton buttonRed"></div>
-                    <div id="button6" class="bumperButton buttonRed"></div>
+                    <input type="text" readonly id="button8" class="triggerButton buttonRed">
+                    <input type="text" readonly id="button6" class="bumperButton buttonRed">
                 </div>
                 <div id="triggerButtonsLeft" class="buttonGroup">
-                    <div id="button5" class="triggerButton buttonRed"></div>
-                    <div id="button7" class="bumperButton buttonRed"></div>
+                    <input type="text" readonly id="button5" class="triggerButton buttonRed">
+                    <input type="text" readonly id="button7" class="bumperButton buttonRed">
                 </div>
                 <div id="rectangleButtons">
-                    <div id="button10" class="rectangleLeft rectangleButton buttonRed"></div>
-                    <div id="button11" class="rectangleRight rectangleButton buttonRed"></div>
+                    <input type="text" readonly id="button10" class="rectangleLeft rectangleButton buttonRed">
+                    <input type="text" readonly id="button11" class="rectangleRight rectangleButton buttonRed">
                 </div>
                 <div id="stickGroupLeft" class="buttonGroup">
-                    <div id="button9" class="stickButton buttonBlue"></div>
-                    <div id="button13" class="buttonTop buttonRed squareButton"></div>
-                    <div id="button14" class="buttonRight buttonRed squareButton"></div>
-                    <div id="button15" class="buttonBottom buttonRed squareButton"></div>
-                    <div id="button16" class="buttonLeft buttonRed squareButton"></div>
-                    <div id="stickLeft" class="stick"></div>
+                    <input type="text" readonly id="button9" class="stickButton buttonBlue">
+                    <input type="text" readonly id="button13" class="buttonTop buttonRed squareButton">
+                    <input type="text" readonly id="button14" class="buttonRight buttonRed squareButton">
+                    <input type="text" readonly id="button15" class="buttonBottom buttonRed squareButton">
+                    <input type="text" readonly id="button16" class="buttonLeft buttonRed squareButton">
                 </div>
                 <div id="stickGroupRight" class="buttonGroup">
-                    <div id="button12" class="stickButton buttonBlue"></div>
-                    <div id="button21" class="buttonTop buttonRed squareButton"></div>
-                    <div id="button22" class="buttonRight buttonRed squareButton"></div>
-                    <div id="button23" class="buttonBottom buttonRed squareButton"></div>
-                    <div id="button24" class="buttonLeft buttonRed squareButton"></div>
-                    <div id="stickRight" class="stick"></div>
+                    <input type="text" readonly id="button12" class="stickButton buttonBlue">
+                    <input type="text" readonly id="button21" class="buttonTop buttonRed squareButton">
+                    <input type="text" readonly id="button22" class="buttonRight buttonRed squareButton">
+                    <input type="text" readonly id="button23" class="buttonBottom buttonRed squareButton">
+                    <input type="text" readonly id="button24" class="buttonLeft buttonRed squareButton">
                 </div>
             </div>
         </div>
