--- a/Code/index.html
+++ b/Code/index.html
@@ -19,22 +19,23 @@
             <div id="titleBox" class="backgroundGray curvedBorder">GAMEPAD: THE MAPPER</div>
             <div id="saveSettings" class="borderGray buttonBlue curvedBorder">Save</div>
             <div id="openSave" class="borderGray buttonBlue curvedBorder">Open Save Location</div>
+            <input type="file" id="openSavedFile"/>
             <div id="gamepadButtons">
                 <div id="gamepadButton1" class="gamepadButton borderGray buttonBlue curvedBorder">Gamepad 1</div>
                 <div id="gamepadButton2" class="gamepadButton borderGray buttonBlue curvedBorder">Gamepad 2</div>
                 <div id="gamepadButton3" class="gamepadButton borderGray buttonBlue curvedBorder">Gamepad 3</div>
-                <div id="gamepadButton4" class="gamepadButton borderGray buttonBlue curvedBorder">Gamepad 4</div>
+<!--                <div id="gamepadButton4" class="gamepadButton borderGray buttonBlue curvedBorder">Gamepad 4</div>
                 <div id="gamepadButton5" class="gamepadButton borderGray buttonBlue curvedBorder">Gamepad 5</div>
-                <div id="gamepadButton6" class="gamepadButton borderGray buttonBlue curvedBorder">Gamepad 6</div>
+                <div id="gamepadButton6" class="gamepadButton borderGray buttonBlue curvedBorder">Gamepad 6</div>-->
             </div>
             <div id="controllerBox" class="backgroundGray curvedBorder">
                 <div id="assign" class="curvedBorder">Assign</div>
-                <div id="dpad" class="buttonGroup">
+<!--                <div id="dpad" class="buttonGroup">
                     <input type="text" readonly id="button13" class="buttonTop buttonRed squareButton">
                     <input type="text" readonly id="button16" class="buttonRight buttonRed squareButton">
                     <input type="text" readonly id="button14" class="buttonBottom buttonRed squareButton">
                     <input type="text" readonly id="button15" class="buttonLeft buttonRed squareButton">
-                </div>
+                </div>-->
                 <div id="circleButtons" class="buttonGroup">
                     <input type="text" readonly id="button1" class="buttonBottom buttonBlue circleButton">
                     <input type="text" readonly id="button2" class="buttonRight buttonBlue circleButton">
@@ -42,30 +43,30 @@
                     <input type="text" readonly id="button4" class="buttonTop buttonBlue circleButton">
                 </div>
                 <div id="triggerButtonsRight" class="buttonGroup">
-                    <input type="text" readonly id="button8" class="triggerButton buttonRed">
+<!--                    <input type="text" readonly id="button8" class="triggerButton buttonRed">-->
                     <input type="text" readonly id="button6" class="bumperButton buttonRed">
                 </div>
                 <div id="triggerButtonsLeft" class="buttonGroup">
-                    <input type="text" readonly id="button7" class="triggerButton buttonRed">
+<!--                    <input type="text" readonly id="button7" class="triggerButton buttonRed">-->
                     <input type="text" readonly id="button5" class="bumperButton buttonRed">
                 </div>
                 <div id="rectangleButtons">
-                    <input type="text" readonly id="button9" class="rectangleLeft rectangleButton buttonRed">
-                    <input type="text" readonly id="button10" class="rectangleRight rectangleButton buttonRed">
+                    <input type="text" readonly id="button7" class="rectangleLeft rectangleButton buttonRed">
+                    <input type="text" readonly id="button8" class="rectangleRight rectangleButton buttonRed">
                 </div>
                 <div id="stickGroupLeft" class="buttonGroup">
-                    <input type="text" readonly id="button11" class="stickButton buttonBlue">
-                    <input type="text" readonly id="button17" class="buttonTop buttonRed squareButton">
+                    <input type="text" readonly id="button9" class="stickButton buttonBlue">
+<!--                    <input type="text" readonly id="button17" class="buttonTop buttonRed squareButton">
                     <input type="text" readonly id="button18" class="buttonRight buttonRed squareButton">
                     <input type="text" readonly id="button19" class="buttonBottom buttonRed squareButton">
-                    <input type="text" readonly id="button20" class="buttonLeft buttonRed squareButton">                    
+                    <input type="text" readonly id="button20" class="buttonLeft buttonRed squareButton">                    -->
                 </div>
                 <div id="stickGroupRight" class="buttonGroup">
-                    <input type="text" readonly id="button12" class="stickButton buttonBlue">
-                    <input type="text" readonly id="button21" class="buttonTop buttonRed squareButton">
+                    <input type="text" readonly id="button10" class="stickButton buttonBlue">
+<!--                    <input type="text" readonly id="button21" class="buttonTop buttonRed squareButton">
                     <input type="text" readonly id="button22" class="buttonRight buttonRed squareButton">
                     <input type="text" readonly id="button23" class="buttonBottom buttonRed squareButton">
-                    <input type="text" readonly id="button24" class="buttonLeft buttonRed squareButton">
+                    <input type="text" readonly id="button24" class="buttonLeft buttonRed squareButton">-->
                 </div>
             </div>
         </div>
