--- a/Code/index.html
+++ b/Code/index.html
@@ -31,42 +31,42 @@
             <div id="controllerBox" class="backgroundGray curvedBorder">
                 <div id="assign" class="curvedBorder">Assign</div>
 <!--                <div id="dpad" class="buttonGroup">
-                    <input type="text" readonly id="button13" class="buttonTop buttonRed squareButton">
-                    <input type="text" readonly id="button16" class="buttonRight buttonRed squareButton">
-                    <input type="text" readonly id="button14" class="buttonBottom buttonRed squareButton">
-                    <input type="text" readonly id="button15" class="buttonLeft buttonRed squareButton">
+                    <input type="text" id="button13" class="buttonTop buttonRed squareButton">
+                    <input type="text" id="button16" class="buttonRight buttonRed squareButton">
+                    <input type="text" id="button14" class="buttonBottom buttonRed squareButton">
+                    <input type="text" id="button15" class="buttonLeft buttonRed squareButton">
                 </div>-->
                 <div id="circleButtons" class="buttonGroup">
-                    <input type="text" readonly id="button1" class="buttonBottom buttonBlue circleButton">
-                    <input type="text" readonly id="button2" class="buttonRight buttonBlue circleButton">
-                    <input type="text" readonly id="button3" class="buttonLeft buttonBlue circleButton">
-                    <input type="text" readonly id="button4" class="buttonTop buttonBlue circleButton">
+                    <input type="text" id="button1" class="buttonBottom buttonBlue circleButton">
+                    <input type="text" id="button2" class="buttonRight buttonBlue circleButton">
+                    <input type="text" id="button3" class="buttonLeft buttonBlue circleButton">
+                    <input type="text" id="button4" class="buttonTop buttonBlue circleButton">
                 </div>
                 <div id="triggerButtonsRight" class="buttonGroup">
-<!--                    <input type="text" readonly id="button8" class="triggerButton buttonRed">-->
-                    <input type="text" readonly id="button6" class="bumperButton buttonRed">
+<!--                    <input type="text" id="button8" class="triggerButton buttonRed">-->
+                    <input type="text" id="button6" class="bumperButton buttonRed">
                 </div>
                 <div id="triggerButtonsLeft" class="buttonGroup">
-<!--                    <input type="text" readonly id="button7" class="triggerButton buttonRed">-->
-                    <input type="text" readonly id="button5" class="bumperButton buttonRed">
+<!--                    <input type="text" id="button7" class="triggerButton buttonRed">-->
+                    <input type="text" id="button5" class="bumperButton buttonRed">
                 </div>
                 <div id="rectangleButtons">
-                    <input type="text" readonly id="button7" class="rectangleLeft rectangleButton buttonRed">
-                    <input type="text" readonly id="button8" class="rectangleRight rectangleButton buttonRed">
+                    <input type="text" id="button7" class="rectangleLeft rectangleButton buttonRed">
+                    <input type="text" id="button8" class="rectangleRight rectangleButton buttonRed">
                 </div>
                 <div id="stickGroupLeft" class="buttonGroup">
-                    <input type="text" readonly id="button9" class="stickButton buttonBlue">
-<!--                    <input type="text" readonly id="button17" class="buttonTop buttonRed squareButton">
-                    <input type="text" readonly id="button18" class="buttonRight buttonRed squareButton">
-                    <input type="text" readonly id="button19" class="buttonBottom buttonRed squareButton">
-                    <input type="text" readonly id="button20" class="buttonLeft buttonRed squareButton">                    -->
+                    <input type="text" id="button9" class="stickButton buttonBlue">
+<!--                    <input type="text" id="button17" class="buttonTop buttonRed squareButton">
+                    <input type="text" id="button18" class="buttonRight buttonRed squareButton">
+                    <input type="text" id="button19" class="buttonBottom buttonRed squareButton">
+                    <input type="text" id="button20" class="buttonLeft buttonRed squareButton">                    -->
                 </div>
                 <div id="stickGroupRight" class="buttonGroup">
-                    <input type="text" readonly id="button10" class="stickButton buttonBlue">
-<!--                    <input type="text" readonly id="button21" class="buttonTop buttonRed squareButton">
-                    <input type="text" readonly id="button22" class="buttonRight buttonRed squareButton">
-                    <input type="text" readonly id="button23" class="buttonBottom buttonRed squareButton">
-                    <input type="text" readonly id="button24" class="buttonLeft buttonRed squareButton">-->
+                    <input type="text" id="button10" class="stickButton buttonBlue">
+<!--                    <input type="text" id="button21" class="buttonTop buttonRed squareButton">
+                    <input type="text" id="button22" class="buttonRight buttonRed squareButton">
+                    <input type="text" id="button23" class="buttonBottom buttonRed squareButton">
+                    <input type="text" id="button24" class="buttonLeft buttonRed squareButton">-->
                 </div>
             </div>
         </div>
